<resources>
    <string name="app_name">CafeteriaApp</string>
    <string name="start_qr_code_reader_msg">Starting QR code reader&#8230;</string>
    <string name="listvoucher">Voucher</string>
    <string name="listproduct_name">Product</string>
    <string name="listproduct_price">Price</string>
    <string name="listproduct_quantity">Quantity</string>
    <string name="voucher">voucher</string>
    <string name="product_quantity">quantity</string>
    <string name="product_price">price</string>
    <string name="product_name">name</string>

    <string name="order_number_header">Order Number: </string>
    <string name="order_number">number</string>
    <string name="total_price_header">Total Price: </string>
    <string name="total_price">price</string>


</resources>
